--- a/ex10_Priscila Bastos.html
+++ b/ex10_Priscila Bastos.html
@@ -12,13 +12,12 @@
         }
 
         h1 {
-            font-size: 50px;
+            font-size: 40px;
         }
 
         table {
             border-collapse: collapse;
-            width: 800px;
-            height: 420px;
+            width: 690px;
         }
 
         caption {
@@ -32,7 +31,7 @@
             border: 1px solid black;
             font-size: 18px;
             text-align: justify;
-            padding: 15px;
+            padding: 15px 15px;
         }
 
         th{
